[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/rootGame.gd" type="Script" id=1]

[node name="rootGame" type="Node"]
script = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="idl"]
